# DocEasy

./: .gitignore
backend/: chunk_mdn.py  extract_mdn.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: challenge.py  concept.py  doubt.py  quiz.py
backend/app/llm/: gemini.py  groq_api.py
backend/app/rag/: embedder.py  generator.py  retriever.py
backend/app/schemas/: challenge_schema.py  concept_schema.py  doubt_schema.py  quiz_schema.py
backend/app/services/: challenge_service.py  concept_service.py  doubt_service.py  quiz_service.py
backend/data/: chunks.json  concepts.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChallengeTab.jsx  ConceptTab.jsx  DoubtPanel.jsx  Logo.jsx  ProgressBar.jsx  QuizTab.jsx  RoadmapNode.jsx  Tabs.jsx
frontend/src/data/: topics.js
frontend/src/pages/: Home.jsx  Lesson.jsx  Roadmap.jsx  Splash.jsx
frontend/src/utils/: progress.js
